Fixed minor layout bug with multiple cart items getting cut off.

--- a/src/styles/modules/cart-tray.module.css
+++ b/src/styles/modules/cart-tray.module.css
@@ -53,7 +53,7 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   padding-top: 90px;
-  padding-bottom: 100px;
+  padding-bottom: 125px;
   min-height: 100%;
 }
 .cartReview {
@@ -75,6 +75,7 @@
   }
 }
 .cartTotal {
+  line-height: 1;
   flex-grow: 1;
 }
 .checkoutButton {
